--- a/hw5/hw5.tex
+++ b/hw5/hw5.tex
@@ -56,13 +56,13 @@ Let \(C(a,b)\) be the cost of operating in city \(a\) during month \(b\). Constr
 that return the cost of operating in New York or San Francisco, respectively, from months \(i\) to \(j\) using the following algorithm.
 \begin{verbatim}
 for x from 1 to n
-    for y from x to n
-        if (y==x)
-            N[x,y]==C(NY,y)
-            S[x,y]==C(SF,y)
-        else
-            N[x,y]==N[x,y-1]+C(NY,y)
-            S[x,y]==S[x,y-1]+C(SF,y)
+   for y from x to n
+      if (y==x)
+         N[x,y]==C(NY,y)
+         S[x,y]==C(SF,y)
+      else
+         N[x,y]==N[x,y-1]+C(NY,y)
+         S[x,y]==S[x,y-1]+C(SF,y)
 return N, S
 \end{verbatim}
 This step runs in \(O(n^2)\) time, as it loops twice over \(n\). Then we define a function \(D(i)\) that gives the minimum operating cost
@@ -74,26 +74,26 @@ optimal cost after \(n\) months.
 E(0)=Either
 D(0)=0
 for x from 1 to n
-    minCost = infinity
-    endCity = Either
-    for y from 0 to x-1
-        nyMoveCost=0
-        sfMoveCost=0
-        if (E(y)==NY)
-            sfMoveCost=M
-        else if (E(y)==SF)
-            nyMoveCost=M
-        if (D(y)+N(y+1,x)+nyMoveCost<minCost)
-            minCost=D(y)+N(y+1,x)+nyMoveCost
-            endCity=NY
-        if (D(y)+S(y+1,x)+sfMoveCost<minCost)
-            minCost=D(y)+S(y+1,x)+sfMoveCost
-            endCity=SF
-        if ((D(y)+N(y+1,x)+nyMoveCost==minCost && endCity==SF) ||
-            (D(y)+S(y+1,x)+sfMoveCost==minCost && endCity==NY))
-            endCity=Either
-    D(x)=minCost
-    E(x)=endCity
+   minCost = infinity
+   endCity = Either
+   for y from 0 to x-1
+      nyMoveCost=0
+      sfMoveCost=0
+      if (E(y)==NY)
+         sfMoveCost=M
+      else if (E(y)==SF)
+         nyMoveCost=M
+      if (D(y)+N(y+1,x)+nyMoveCost<minCost)
+         minCost=D(y)+N(y+1,x)+nyMoveCost
+         endCity=NY
+      if (D(y)+S(y+1,x)+sfMoveCost<minCost)
+         minCost=D(y)+S(y+1,x)+sfMoveCost
+         endCity=SF
+      if ((D(y)+N(y+1,x)+nyMoveCost==minCost && endCity==SF)||
+          (D(y)+S(y+1,x)+sfMoveCost==minCost && endCity==NY))
+         endCity=Either
+   D(x)=minCost
+   SE(x)=endCity
 return D(n)
 \end{verbatim}
 This algorithm is \(O(n^2)\) because it loops over \(n\) twice. It is correct because it iteratively generates the next minimum cost for months \(1,\ldots,n\)
